Fix subtitle alignment issue

--- a/FancyTwitchServer/content/scss/main.scss
+++ b/FancyTwitchServer/content/scss/main.scss
@@ -284,6 +284,7 @@ font-variation-settings:
             width: 12px;
             height: 12px;
             right: 0;
+            margin-bottom: 1px;
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
@@ -319,7 +320,7 @@ font-variation-settings:
         flex-direction: row;
         justify-content: space-between;
         left: 5px;
-        bottom: 4px;
+        bottom: 0px;
         padding: 0px;
         width: 90%;
         &.sel-inf {
